# Aerospace-OS

./: CMakeLists.txt  README.md  config.py  config.yaml
ARINC429/Inc/: arinc429.h
ARINC429/Src/: arinc429.c
ARINC653/Inc/: error.h  ipc_queueing.h  ipc_sampling.h  model.h  partition.h  process.h  scheduler.h  types.h
ARINC653/Src/: ipc_queueing.c  ipc_sampling.c  partition.c  scheduler.c
ARINC664/Inc/: arinc664.h
ARINC664/Src/: arinc664.c
Comm/ARINC429/Inc/: arinc429.h
Comm/ARINC429/Src/: arinc429.c
Comm/MILSTD1553B/Src/: milstd1553b.c
MILSTD1553B/Inc/: milstd1553b.h
MILSTD1553B/Src/: milstd1553b.c
Partitions/Inc/: Task1.h  Task2.h
Partitions/Partition1/Process1/Inc/: task1.h
Partitions/Partition1/Process1/Src/: Task1.c  task1.c
Partitions/Partition2/Process1/Inc/: Task2.h  task2.h
Partitions/Partition2/Process1/Src/: Task2.c  task2.c
Partitions/Partition3/Process1/Inc/: task3.h
Partitions/Partition3/Process1/Src/: task3.c
Partitions/Src/: Task1.c  Task2.c
RTOS/ARINC653/Inc/: error.h  process.h  scheduler.h
RTOS/ARINC653/Src/: error.c  ipc_queueing.c  ipc_sampling.c  partition.c  process.c
Runner/: main.c  partitions.cmake
